修改多图上传 插入图片 弹出样式
Signed-off-by: ganlanshu0211 <260096556@qq.com>

--- a/dialogs/image/image.html
+++ b/dialogs/image/image.html
@@ -43,14 +43,14 @@
                         <label for="url"><var id="lang_input_url"></var></label>
                         <span><input class="text" id="url" type="text"/></span>
                     </div>
-                </div>
-                <div class="left">
                     <div class="row">
                         <label><var id="lang_input_size"></var></label>
                         <span><var id="lang_input_width">&nbsp;&nbsp;</var><input class="text" type="text" id="width"/>px </span>
                         <span><var id="lang_input_height">&nbsp;&nbsp;</var><input class="text" type="text" id="height"/>px </span>
-                        <span><input id="lock" type="checkbox" disabled="disabled"><span id="lockicon"></span></span>
+                        <span><input id="lock" type="checkbox" disabled="disabled"><span id="lockicon"><var id="lang_lock_width_height">&nbsp;&nbsp;</var></span></span>
                     </div>
+                </div>
+                <div class="left">
                     <div class="row">
                         <label><var id="lang_input_border"></var></label>
                         <span><input class="text" type="text" id="border"/>px </span>
@@ -59,9 +59,9 @@
                         <label><var id="lang_input_vhspace"></var></label>
                         <span><input class="text" type="text" id="vhSpace"/>px </span>
                     </div>
-                    <div class="row">
+                    <div class="row desc">
                         <label><var id="lang_input_title"></var></label>
-                        <span><input class="text" type="text" id="title"/></span>
+                        <span><textarea class="text" id="title" cols="30" rows="3"></textarea></span>
                     </div>
                 </div>
                 <div class="right"><div id="preview"></div></div>
