添加画板模态框样式设置

--- a/dialogs/scrawl/scrawl.html
+++ b/dialogs/scrawl/scrawl.html
@@ -11,8 +11,8 @@
 <div class="main" id="J_wrap">
     <div class="hot">
         <div class="drawBoard border_style1">
-            <canvas id="J_brushBoard" class="brushBorad" width="360" height="300"></canvas>
-            <div id="J_picBoard" class="picBoard" style="width: 360px;height: 300px"></div>
+            <canvas id="J_brushBoard" class="brushBorad" width="400" height="372"></canvas>
+            <div id="J_picBoard" class="picBoard" style="width: 400px;height: 372px"></div>
         </div>
         <div id="J_operateBar" class="operateBar">
             <span id="J_previousStep" class="previousStep">
@@ -51,7 +51,7 @@
         </div>
         <div class="sectionBar">
             <div id="J_addImg" class="addImgH">
-                <em class="icon"></em>
+                <!--<em class="icon"></em>-->
                 <em class="text"><var id="lang_input_addPic"></var></em>
                 <form method="post" id="fileForm" enctype="multipart/form-data" class="addImgH_form" target="up">
                     <input type="file" name="upfile" id="J_imgTxt"
@@ -62,7 +62,7 @@
         </div>
         <div class="sectionBar">
             <span id="J_removeImg" class="removeImg">
-                <em class="icon"></em>
+                <!--<em class="icon"></em>-->
                 <em class="text"><var id="lang_input_removePic"></var></em>
             </span>
         </div>
