删除scrawl.html icon图标对应文字说明

--- a/dialogs/scrawl/scrawl.html
+++ b/dialogs/scrawl/scrawl.html
@@ -17,19 +17,27 @@
         <div id="J_operateBar" class="operateBar">
             <span id="J_previousStep" class="previousStep">
                 <em class="icon"></em>
-                <em class="text"><var id="lang_input_previousStep"></var></em>
+                <em class="text">
+                    <!--<var id="lang_input_previousStep"></var>-->
+                </em>
             </span>
             <span id="J_nextStep" class="nextStep">
                 <em class="icon"></em>
-                <em class="text"><var id="lang_input_nextsStep"></var></em>
+                <em class="text">
+                    <!--<var id="lang_input_nextsStep"></var>-->
+                </em>
             </span>
             <span id="J_clearBoard" class="clearBoard">
                 <em class="icon"></em>
-                <em class="text"><var id="lang_input_clear"></var></em>
+                <em class="text">
+                    <!--<var id="lang_input_clear"></var>-->
+                </em>
             </span>
             <span id="J_sacleBoard" class="scaleBoard">
                 <em class="icon"></em>
-                <em class="text"><var id="lang_input_ScalePic"></var></em>
+                <em class="text">
+                    <!--<var id="lang_input_ScalePic"></var>-->
+                </em>
             </span>
         </div>
     </div>
