修改 页面间距及提示信息样式

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 'insertunorderedlist', //无序列表
                 'selectall', //全选
                 'cleardoc', //清空文档
-                'snapscreen', //截图
-                'strikethrough', //删除线
+//                'snapscreen', //截图
+//                'strikethrough', //删除线
                 'rowspacingtop', //段前距
                 'rowspacingbottom', //段后距
                 'lineheight', //行间距
